--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <app-root></app-root>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3">
-  </script>
+  <script src="https://smtpjs.com/v3/smtp.js">
+</script>
 </body>
 </html>
